Fixed subtitle spacing

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -58,3 +58,7 @@ body {
 .m-10 {
 	margin: 10px;
 }
+
+.m-b-9 {
+	margin-bottom: 9px;
+}
